# ClientService

./: .gitattributes  .gitignore  CMakeLists.txt  ClientService.sln  README.md  ServerConfig.json  postgres.sql
ClientServerRunner/: ClientServerRunner.cpp  ClientServerRunner.vcxproj  ClientServerRunner.vcxproj.filters
ClientService/: clientService.proto  config.h.in
ClientServiceServer/: ClientServiceServer.cpp  ClientServiceServer.vcxproj  ClientServiceServer.vcxproj.filters  client.cpp  clientServer.h  config.cpp  database.cpp  uv.cpp
ProtobufLibraryTest/: ProtobufLibraryTest.vcxproj  pch.h  test.cpp
ProtobufSendingTest/: ProtobufSendingTest.cpp  ProtobufSendingTest.vcxproj  ProtobufSendingTest.vcxproj.filters  notify.cpp  test.h
WindowsClientService/: WindowsClientService.h  WindowsClientService.rc  WindowsClientService.vcxproj  WindowsClientService.vcxproj.filters  clientService.cpp  dllmain.cpp  event.cpp  network.cpp  resource.h  service.cpp  service.h  utils.cpp
WindowsProtobufLib/: WindowsProtobufLib.vcxproj  WindowsProtobufLib.vcxproj.filters  protobufLib.cpp  protobufLib.h  utils.cpp
cmake/: CheckCXXCompiler.cmake  CheckFunction.cmake  FindLIBUV.cmake  FindLibPQXX.cmake  FindRapidJSON.cmake  Test.cmake
